website is fully responsive, fixed many layout issues

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ img {
 
 .product-name {
     font-weight: bold;
-    font-size: 14px;
     color: rgb(65, 65, 65);
 }
 
@@ -66,7 +65,6 @@ img {
 }
 
 .product-price p {
-    font-size: 1.7em;
     font-weight: bold;
     color: rgb(48, 48, 48);
 }
@@ -80,7 +78,6 @@ img {
     background-color:rgb(56, 66, 209);
     color: rgb(233, 233, 233);
     font-weight: 500;
-    font-size: 1.3em;
     border-style: none;
     border: none;
     border-radius: 0.5em;
@@ -128,36 +125,36 @@ main > h1 {
 /* ===========CAROUSEL SECTION============== */
 
 .carousel-section {
+    min-height: 80vh;
     width: 70vw;
-    float: right;
+    float:inline-start;
 }
 
 .products {
-    /* display: flex;
-    gap: 1em; */
-    margin: 0 3em 1em 0;
+    margin: 0 0 3vh 0;
 }
 
 .product-card {
-    max-width: 280px;
+    max-width: 17em; 
+    margin-right: 1vw;
 }
 
 .image-container {
     text-align: center;
-    margin: 0.7em 0.7em;
+    margin: 0.9vh 0.9vw;
 }
 
 .image-placeholder {
-    max-width: 15em;
-    min-height: 15em;
+    min-height: 13em;
 }
 
 .container {
-    padding: 0 1em;
+    padding: 0 1vw;
 }
 
 .product-name {
-    padding: 1em 1em;
+    font-size: 16px;
+    padding: 1.5vh 1vw;
 }
 
 .product-name p {
@@ -165,16 +162,17 @@ main > h1 {
 }
 
 .product-price {
-    margin-top: 1em;
+    margin-top: 1vh;
 }
 
 .product-price p {
-    margin: 0 0.5em;
-    padding: 0.5em 0.1em;
+    font-size: 24px;
+    margin: 0 0.5vw;
+    padding: 1.2vh 0 1.2vh 1vw;
 }
 
 .cargo {
-    margin: 1em 0;
+    margin: 1vh 0;
 }
 
 .buy-container {
@@ -183,46 +181,70 @@ main > h1 {
 }
 
 .buy-button {
-    padding: 0.5em 1em;
-    margin: 0.2em 0.5em 0.7em 0.5em;
+    font-size: 17px;
+    padding: 1vh 3vw;
+    margin: 1vh 0.5vw 1.5vh 0.5vw;
 }
 
 /* ===================RESPONSIVE DESIGN==================== */
 
  @media screen and (max-width: 850px),
-       screen and (max-height: 600px) {
-    
-    /* disable Flickity for small devices */
-    .carousel:after {
-        content: '';
-    }
-    main {
-        overflow: hidden;
-    }
-    p {
-        font-size: 13px;
-    }
-    .content {
-        flex-direction: column;
+       screen and (max-height: 665px) {
+    main > h1 {
+        font-size: 20px;
+        padding: 3vh 0 0 7vw;
     }
     .sidebar {
-        display: flex;
-        flex-wrap: nowrap;
         justify-content: space-between;
         max-width: 100%;
-        margin: 2vh 2vw;
+        margin: 2em 2em;
     }
     .sidebar li{
         display: inline;
         padding: 0.2em 0.2em 0.2em 0.2em;
-        margin:0.5em 1em;
+        margin: 0.5em 1em;
+    }
+    .carousel-section {
+        min-height: 70vh;
+        width: 90vw;
     }
     .products {
         margin: 0 2em;
     }
     .product-card {
-        max-width: 40vw;
-        max-height: 500px;
+        max-width: 30vw;  
+        min-width: 10em; 
+        margin-right: 2vw;
+    }
+    .image-container {
+        margin: 1vh 1.5vw;
+    }
+    .image-placeholder {
+        min-height: 20vh; 
+    }
+    .product-name {
+        padding: 1vh 3vw;
+    }
+    .product-name p {
+        font-size: 13px;
+    }
+    .product-price {
+        margin: 1vh 1.5vw;
+    }
+    .product-price p {
+        margin: 0;
+        font-size: 20px;
+        padding: 1vh 2vw;
+    }
+    .cargo {
+        margin: 1.2vh 2vw;
+    }
+    .cargo p {
+        font-size: 12px;
+    }
+    .buy-button {
+        font-size: 18px;
+        width: 80%;
     }
 
 } 
